@@ -2,6 +2,7 @@ Pending changes in the mainline
 ===============================
 
 * Switch to openssl-1.0.1g in static builds (cf. Heartbleed exploit)
+* Switch to boost 1.55.0 in static builds (to solve compiling errors)
 * Better logging about nonexistent tags
 * Dcm4Chee manufacturer
 * Automatic discovering of the path to the DICOM dictionaries
